added 'verify email user' button to manageemailusers

--- a/src/main/webapp/clientmanager/callbacks/managecallbacks.xhtml
+++ b/src/main/webapp/clientmanager/callbacks/managecallbacks.xhtml
@@ -188,7 +188,7 @@
                 </p:dialog>
                 <!--end create callback dialog-->
 
-                <p:dialog header="Edit Callback/" widgetVar="editgroupmodal" id="editgroupmodal" modal="true" width="750">
+                <p:dialog header="Edit Callback" widgetVar="editgroupmodal" id="editgroupmodal" modal="true" width="750">
                     <h:form id ="editCallback">
                         <p:panelGrid columns="2" style=" padding: 0; background: green">
                             <p:panelGrid  columns="2" style="">
