--- a/src/main/webapp/clientmanager/groups/viewgroups.xhtml
+++ b/src/main/webapp/clientmanager/groups/viewgroups.xhtml
@@ -3,7 +3,6 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions"
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <h:head></h:head>
     <h:body>
@@ -49,17 +48,17 @@
                                 <h:outputText value="#{data.description}" />
                             </p:column>
                             <p:column headerText="Action">
-                                <p:commandButton style="padding: .3em 1em;"
+                                <p:commandButton style="padding: .3em 1em; font-size: 1.3em"
                                                  id="editbutton"
-                                                 icon="fa fa-pencil-square-o"
+                                                 icon="pi pi-pencil"
                                                  oncomplete="PF('editgroupmodal').show();">
                                     <p:ajax listener="#{groupcontroller.setCurrentGroupItem(data)}" 
                                             update="update:editgroupmodal"/>
                                 </p:commandButton>
 
-                                <p:commandButton style="padding: .3em 1em;"
+                                <p:commandButton style="padding: .3em 1em; font-size: 1.4em"
                                                  id="deletebutton"
-                                                 icon="fa fa-trash"
+                                                 icon="pi pi-trash"
                                                  oncomplete="PF('deletegroupmodal').show();">
                                     <p:ajax listener="#{groupcontroller.setCurrentGroupItem(data)}" 
                                             update="delete:deletegroupmodal"/>
