--- a/src/main/webapp/clientmanager/reports/emailoutreport.xhtml
+++ b/src/main/webapp/clientmanager/reports/emailoutreport.xhtml
@@ -1,122 +1,124 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0
-    Transitional//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
-    <h:head></h:head>
-    <h:body id="body">
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+    <h:head>
+        <title>Email Out Report</title>
+    </h:head>
+    <h:body>
         <ui:composition > 
             <style>
                 .ui-growl-item-container.ui-state-highlight {
                     border-color: red;
                 }
-
             </style>
 
-            <p:growl id="msgs" showDetail="true" life="3000"/>
 
             <div align="center">
-                <p:panel id="maintab" header="SMS OUT REPORT" >
+                <p:panel id="maintab" header="EMAIL OUT REPORT" >
 
                     <h:form>
+                        <p:growl id="msgs" showDetail="true" life="3000"/>
                         <h:panelGrid columns="8" style="width:100%; margin-left:auto; margin-right:auto; padding:8px;">
                             <h:outputText value="Start Date :"/>
-                            <p:calendar value="#{smsout.reportStartDate}" style="width:200px"/>
+                            <p:calendar value="#{emailoutcontroller.reportStartDate}" style="width:200px"/>
                             <h:outputText value="End Date :"/>
-                            <p:calendar value="#{smsout.reportEndDate}" style="width:200px"/>
+                            <p:calendar value="#{emailoutcontroller.reportEndDate}" style="width:200px"/>
                             <h:outputText value="User :"/>
-                            <p:selectOneMenu id="users" value="#{smsout.username}" filter="true">
+                            <p:selectOneMenu id="users" value="#{emailoutcontroller.username}" filter="true">
                                 <f:ajax event="change" render="addgroupform" />
                                 <f:selectItem itemLabel="Select User" itemValue="" />
-                                <f:selectItems value="#{sMSOut.data}" />
+                                <f:selectItems value="#{emailout.getData()}" />
                             </p:selectOneMenu>
                             <h:panelGroup layout="block">
                                 <p:commandLink  id="pdf_export">
-                                    <p:dataExporter type="csv" target="report:table" fileName="SMSOut"/>
+                                    <p:dataExporter type="csv" target="report:table" fileName="EmailOut"/>
                                     <h:graphicImage value="/resources/images/csv.png" id="export_to_pdf" />
                                 </p:commandLink>
                             </h:panelGroup>
                             <h:panelGroup layout="block">
                                 <p:commandLink  id="xlsx_export" >
-                                    <p:dataExporter type="xlsx" target="report:table" fileName="SMSOut" postProcessor="#{smsout.postProcessXLSX}"/>
+                                    <p:dataExporter type="xlsx" target="report:table" fileName="EmailOut" postProcessor="#{smsout.postProcessXLSX}"/>
                                     <h:graphicImage value="/resources/images/xlsx.png" id="export_to_xlsx" />
                                 </p:commandLink>
                             </h:panelGroup>
                         </h:panelGrid>
 
                         <h:panelGrid columns="1" style="width:100%; margin-left:auto; margin-right:auto; padding:8px; text-align:center;">
-                            <p:commandButton value="Generate" action="#{smsout.generateSMSOut()}"
-                                             update=":report:table msgs"/>
+                            <p:commandButton value="Generate" action="#{emailoutcontroller.generateEmailOut()}"
+                                             update="msgs report:table"/>
                         </h:panelGrid>
                     </h:form>
 
                     <h:form id="report">
-                        <p:dataTable id="table" var="smsOut" value="#{smsout.smsUsers}"
+                        <p:dataTable id="table" var="emailuser" value="#{emailoutcontroller.emailUsers}"
                                      rows="10"
                                      paginator="true" paginatorPosition="bottom"
                                      paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     currentPageReportTemplate="Summary total sms sent for this period #{smsout.rows}">
-                            <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="Mobile"/>
-                                </f:facet>
-                                <h:outputText value="#{smsOut.destinationAddr}"/>
-                            </p:column>
-                            <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="Source Address"/>
-                                </f:facet>
-                                <h:outputText value="#{smsOut.sourceAddr}"/>
-                            </p:column>
-
-                            <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="Message"/>
-                                </f:facet>
-                                <h:outputText value="#{smsOut.messagePayload}"/>
-                            </p:column>
-
-                            <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="Time Sent"/>
-                                </f:facet>
-                                <h:outputText value="#{smsOut.timeSubmitted}"/>
-                            </p:column>
-
-                            <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="Last Update"/>
-                                </f:facet>
-                                <h:outputText value="#{smsOut.timeProcessed}"/>
-                            </p:column>
-
+                                     currentPageReportTemplate="Summary total emails sent for this period #{emailoutcontroller.rows}" >
                             <p:column>
                                 <f:facet name="header">
                                     <h:outputText value="User"/>
                                 </f:facet>
-                                <h:outputText value="#{smsOut.user}"/>
+                                <h:outputText value="#{emailuser.user}"/>
+                            </p:column>
+                            <p:column>
+                                <f:facet name="header">
+                                    <h:outputText value="Mobile"/>
+                                </f:facet>
+                                <h:outputText value="#{emailuser.mobile}"/>
+                            </p:column>
+
+                            <p:column filterBy="#{emailuser.emailSrc}" filterMatchMode="contains">
+                                <f:facet name="header">
+                                    <h:outputText value="Source Address"/>
+                                </f:facet>
+                                <h:outputText value="#{emailuser.emailSrc}"/>
                             </p:column>
 
                             <p:column>
+                                <f:facet name="header">
+                                    <h:outputText value="Email To"/>
+                                </f:facet>
+                                <h:outputText value="#{emailuser.emailTo}"/>
+                            </p:column>
+
+                            <p:column>
+                                <f:facet name="header">
+                                    <h:outputText value="Email Reply To"/>
+                                </f:facet>
+                                <h:outputText value="#{emailuser.emailReplyTo}"/>
+                            </p:column>
+
+                            <p:column>
+                                <f:facet name="header">
+                                    <h:outputText value="Subject"/>
+                                </f:facet>
+                                <h:outputText value="#{emailuser.subject}" />
+                            </p:column>
+
+                            <p:column>
+                                <f:facet name="header">
+                                    <h:outputText value="Time Submitted"/>
+                                </f:facet>
+                                <h:outputText value="#{emailuser.timeSubmitted}"/>
+                            </p:column>
+
+                            <p:column filterBy="#{emailuser.status}" filterMatchMode="contains">
                                 <f:facet name="header">
                                     <h:outputText value="Status"/>
                                 </f:facet>
-                                <h:outputText value="#{smsOut.realStatus}"/>
-                            </p:column>
-
-                            <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="No of SMS"/>
-                                </f:facet>
-                                <h:outputText value="#{smsOut.smsCount}"/>
+                                <h:outputText value="#{emailuser.status}"/>
                             </p:column>
 
                         </p:dataTable>
                     </h:form>
+                   
                 </p:panel>
             </div>
         </ui:composition>
     </h:body>
-</html> 
+</html>
