--- a/src/main/webapp/clientmanager/reports/emailoutreport.xhtml
+++ b/src/main/webapp/clientmanager/reports/emailoutreport.xhtml
@@ -9,7 +9,7 @@
         <title>Email Out Report</title>
     </h:head>
     <h:body>
-        <ui:composition > 
+        <ui:composition> 
             <style>
                 .ui-growl-item-container.ui-state-highlight {
                     border-color: red;
@@ -34,13 +34,13 @@
                                 <f:selectItems value="#{emailout.getData()}" />
                             </p:selectOneMenu>
                             <h:panelGroup layout="block">
-                                <p:commandLink  id="pdf_export">
+                                <p:commandLink  id="pdf_export" onstart="PF('loader').show();" oncomplete="PF('loader').hide();">
                                     <p:dataExporter type="csv" target="report:table" fileName="EmailOut"/>
                                     <h:graphicImage value="/resources/images/csv.png" id="export_to_pdf" />
                                 </p:commandLink>
                             </h:panelGroup>
                             <h:panelGroup layout="block">
-                                <p:commandLink  id="xlsx_export" >
+                                <p:commandLink  id="xlsx_export" onstart="PF('loader').show();" oncomplete="PF('loader').hide();">
                                     <p:dataExporter type="xlsx" target="report:table" fileName="EmailOut" postProcessor="#{smsout.postProcessXLSX}"/>
                                     <h:graphicImage value="/resources/images/xlsx.png" id="export_to_xlsx" />
                                 </p:commandLink>
@@ -51,6 +51,10 @@
                             <p:commandButton value="Generate" action="#{emailoutcontroller.generateEmailOut()}"
                                              update="msgs report:table"/>
                         </h:panelGrid>
+
+                        <p:dialog widgetVar="loader" modal="true" closable="false" draggable="false" resizable="false" showHeader="false" width="100" height="50">
+                            <i class="pi pi-spin pi-spinner" style="font-size: 2rem"></i>
+                        </p:dialog>
                     </h:form>
 
                     <h:form id="report">
@@ -113,10 +117,9 @@
                                 </f:facet>
                                 <h:outputText value="#{emailuser.status}"/>
                             </p:column>
-
                         </p:dataTable>
                     </h:form>
-                   
+
                 </p:panel>
             </div>
         </ui:composition>
